--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <div class="form__row">
           <label class="form__label">Distance</label>
-          <input class="form__input form__input--distance" placeholder="km" />
+          <input class="form__input form__input--distance" placeholder="km" type="number" min="1" />
         </div>
         <div class="form__row">
           <label class="form__label">Duration</label>
@@ -102,12 +102,12 @@
         </li> -->
     </ul>
 
-    <p class="copyright">
+    <!-- <p class="copyright">
       &copy; Copyright by
       <a class="twitter-link" target="_blank" href="https://twitter.com/jonasschmedtman">Jonas Schmedtmann</a>. Use for
       learning or your portfolio. Don't use to teach. Don't claim
       as your own.
-    </p>
+    </p> -->
   </div>
 
   <div id="map"></div>
