--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
         </div>
         <div class="form__row">
           <label class="form__label">Duration</label>
-          <input class="form__input form__input--duration" placeholder="min" />
+          <input class="form__input form__input--duration" placeholder="min" type="number" min="1" />
         </div>
         <div class="form__row">
           <label class="form__label">Cadence</label>
-          <input class="form__input form__input--cadence" placeholder="step/min" />
+          <input class="form__input form__input--cadence" placeholder="step/min" type="number" min="1" />
         </div>
         <div class="form__row form__row--hidden">
           <label class="form__label">Elev Gain</label>
-          <input class="form__input form__input--elevation" placeholder="meters" />
+          <input class="form__input form__input--elevation" placeholder="meters" type="number" min="1" />
         </div>
         <button class="form__btn">OK</button>
       </form>
