--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
         </div>
         <div class="form__row">
           <label class="form__label">Distance</label>
-          <input class="form__input form__input--distance" placeholder="km" type="number" min="1" />
+          <input class="form__input form__input--distance" placeholder="km" />
         </div>
         <div class="form__row">
           <label class="form__label">Duration</label>
-          <input class="form__input form__input--duration" placeholder="min" type="number" min="1" />
+          <input class="form__input form__input--duration" placeholder="min" />
         </div>
         <div class="form__row">
           <label class="form__label">Cadence</label>
-          <input class="form__input form__input--cadence" placeholder="step/min" type="number" min="1" />
+          <input class="form__input form__input--cadence" placeholder="step/min" />
         </div>
         <div class="form__row form__row--hidden">
           <label class="form__label">Elev Gain</label>
-          <input class="form__input form__input--elevation" placeholder="meters" type="number" min="1" />
+          <input class="form__input form__input--elevation" placeholder="meters" />
         </div>
         <button class="form__btn">OK</button>
       </form>
